background items to #1a3849.

--- a/css/ding_tabroll.css
+++ b/css/ding_tabroll.css
@@ -51,7 +51,7 @@
     line-height: 17px;
     overflow: hidden;
     padding: 5px 5px 0 20px;
-    background: none repeat scroll 0 0 #999999;
+    background: none repeat scroll 0 0 #1a3849;
     border-bottom: 1px solid #fff;
     font-weight: normal;
     height: 42px;
