--- a/css/ding_tabroll.css
+++ b/css/ding_tabroll.css
@@ -79,7 +79,8 @@
 #featured .ui-tabs-panel .info {
     background: url("../images/bluegbg-75.png") repeat scroll 0 0 transparent;
     bottom: 0;
-    height: 90px;
+    height: 40%;
+    line-height: 20px;
     left: 0;
     position: absolute;
     width: 70%;
